@@ -7,6 +7,7 @@
   frontend.
 * Allow tool processes to immediately continue working on subsequent pages
   despite errors on previous ones.
+* Fix infinite loop scanning reverse pages
 
 
 2.5.6 (11.09.2019):
